2019-10-22  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Fixed a bug printing both a critical and a warning message when both condition match

2019-10-18  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Fixed a bug ignoring --dane without parameters

2019-10-16  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Integrated the DANE checks

2019-10-14  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Remove RSA-PSS if not TLS 1.3 requested
	* check_ssl_cert (check_attr): Write the OPSP issuer cert to the temporary directory

2019-10-10  Matteo Corti  <corti@Matteo-Cortis-Mac-mini.local>

	* check_ssl_cert (main): do not disable TLS 1.3 if --rsa is specified

2019-10-10  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): fixes the ciphers for --rsa and --ecdsa

2019-10-10  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): a wildcard certificate does not match the 'main' domain

2019-10-09  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: disables TLS 1.3 with --rsa
	* check_ssl_cert: Validate OCSP stapling expiring date

2019-09-26  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: stops if needed programs are not foud

2019-09-24  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed a bug in the processing of the SSL Labs options
	* check_ssl_cert: Fixed a bug with POP3S

2019-09-24  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: OCSP check does not trigger an additional s_client call

2019-09-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed a problem in the critical output

2019-09-18  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Consolidated the error messages in case of more than one error
	* check_ssl_cert: Fixed a bug where the cypher was not forced by the OCSP checks

2019-08-09  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (ascii_grep): Removed NULL characters before 'grepping' a file