@@ -90,3 +90,4 @@ Thanks:
 * Many thanks to iasdeoupxe (https://github.com/iasdeoupxe) for various fixes
 * Many thanks to Andre Klärner (https://github.com/klaernie) for the typos corrections
 * Many thanks to Дилян Палаузов (https://github.com/dilyanpalauzov) for the DANE checks
+* Many thanks to dupondje (https://github.com/dupondje) for the check_prog fix
