@@ -68,6 +68,7 @@ with the following individuals added to the list of Contributing Authors
   iasdeoupxe (https://github.com/iasdeoupxe)
   Andre Klärner (https://github.com/klaernie)
   Дилян Палаузов (https://github.com/dilyanpalauzov)
+  dupondje (https://github.com/dupondje)
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
