@@ -38,6 +38,7 @@ Options:
       --dane 302                   verify that a valid DANE-EE(3) Cert(0) SHA2-512(2) TLSA record exists
       --dane 311                   verify that a valid DANE-EE(3) SPKI(1) SHA2-256(1) TLSA record exists
    -d,--debug                      produces debugging output
+      --dig-bin path               path of the dig binary to be used
       --ecdsa                      signature algorithm selection: force ECDSA certificate
    -e,--email address              pattern to match the email address contained
                                    in the certificate
