@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tascii check_ssl_cert.1
 .\"
-.TH "check_ssl_cert" 1 "October, 2019" "1.101.0" "USER COMMANDS"
+.TH "check_ssl_cert" 1 "October, 2019" "1.102.0" "USER COMMANDS"
 .SH NAME
 check_ssl_cert \- checks the validity of X.509 certificates
 .SH SYNOPSIS
@@ -56,6 +56,9 @@ verify that a valid DANE-EE(3) SPKI(1) SHA2-256(1) TLSA record exists
 .TP
 .BR "-d,--debug"
 produces debugging output
+.TP
+.BR "   --dig-bin" " path"
+path of the dig binary to be used
 .TP
 .BR "   --ecdsa"
 signature algorithm selection: force ECDSA certificate
