@@ -1,3 +1,4 @@
+2019-10-25 Version 1.102.0: Option to specify the dig binary and fix in the command line validation checks
 2019-10-22 Version 1.101.0: Fixed a bug printing both a critical and a warning message when both condition match
 2019-10-18 Version 1.100.0: Fixed a bug ignoring --dane without parameters
 2019-10-16 Version 1.99.0: DNS-based Authentication of Named Entities (DANE) checks
